# insightgraph

./: .env.example  .gitignore  AUTHENTICATION.md  DEMO_GUIDE.md  DEPLOYMENT.md  IMPLEMENTATION.md  README.md  README_DATABASE_SETUP.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
backend/: alembic.ini  check_api_status.py  config.py  extractor.py  main.py  requirements.txt  schemas.py  test_llm_quick.py  test_redis_connection.py  worker.py
backend/alembic/: env.py
backend/alembic/versions/: c2a0d09f419f_add_knowledge_graph_tables.py
backend/extractors/: __init__.py  base.py  llm_based.py  rule_based.py
backend/middleware/: __init__.py  api_key_auth.py  rate_limiter.py
backend/models/: __init__.py  database.py  graph_schemas.py  job.py
backend/prompts/: __init__.py  extraction.py
backend/repositories/: graph_repository.py
backend/routers/: extraction.py  graphs.py  jobs.py
backend/services/: __init__.py  cache_service.py  db_service.py  job_service.py  llm_service.py  redis_service.py
backend/tests/: test_api.py  test_cache_service.py  test_extractor.py  test_graph_endpoints.py  test_graph_repository.py  test_infrastructure.py  test_job_service.py  test_llm_extractor.py  test_phase2_endpoints.py
